# evm

./: Cargo.toml
core/: Cargo.toml
core/src/: code.rs  error.rs  lib.rs  memory.rs  opcode.rs  primitive_types.rs  stack.rs  utils.rs  valids.rs
core/src/eval/: arithmetic.rs  bitwise.rs  macros.rs  misc.rs  mod.rs
gasometer/: Cargo.toml
gasometer/src/: costs.rs  lib.rs  memory.rs  tracing.rs  utils.rs
runtime/: Cargo.toml
runtime/src/: context.rs  handler.rs  interrupt.rs  lib.rs  tracing.rs
runtime/src/eval/: macros.rs  mod.rs  system.rs
src/: lib.rs  tracing.rs
src/backend/: memory.rs  mod.rs
src/executor/: stack.rs
