[package]
name = "evm"
version = "0.18.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "SputnikVM - a Portable Blockchain Virtual Machine"
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
evm-core = { version = "0.18", path = "core", default-features = false, features = ["with-serde"] }
evm-gasometer = { version = "0.18", path = "gasometer", default-features = false, features = ["with-serde"] }
evm-runtime = { version = "0.18", path = "runtime", default-features = false }
sha3 = { version = "0.8", default-features = false }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"], optional = true }
#ethereum = { version = "0.4", default-features = false }

[features]
default = ["std"]
with-codec = ["codec", "evm-core/with-codec", "evm-runtime/with-codec"]
with-serde = ["serde", "serde_bytes", "evm-core/with-serde", "evm-runtime/with-serde"]
std = ["evm-core/std", "evm-runtime/std", "sha3/std", "serde/std", "codec/std", "log/std"]

#[workspace]
#members = [
#  "core",
#  "gasometer",
#  "runtime",
#]
