[package]
name = "evm-core"
version = "0.18.2"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "Portable Ethereum Virtual Machine implementation written in pure Rust."
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive", "full"], optional = true }
fixed-hash = { version = "0.7", default-features = false, features = ["rustc-hex"] }
uint = { version = "0.9", default-features = false }
impl-rlp = { version = "0.3", default-features = false }
rlp = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }

[dev-dependencies]
hex = "0.4"

[features]
default = ["std"]
with-codec = ["codec"]
with-serde = ["serde", "serde_bytes"]
std = ["log/std", "codec/std", "serde/std"]
