[package]
name = "evm-gasometer"
version = "0.18.0"
license = "Apache-2.0"
authors = ["Wei Tang <hi@that.world>", "Parity Technologies <admin@parity.io>"]
description = "Portable Ethereum Virtual Machine implementation written in pure Rust."
repository = "https://github.com/sorpaas/rust-evm"
keywords = ["no_std", "ethereum"]
edition = "2018"

[dependencies]
evm-core = { version = "0.18", path = "../core", default-features = false }
evm-runtime = { version = "0.18", path = "../runtime", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
with-serde = ["serde"]
std = [
  "evm-core/std",
  "evm-runtime/std",
]
